--- a/src/componentes/BtnContinuar.css
+++ b/src/componentes/BtnContinuar.css
@@ -10,21 +10,21 @@ body {
   justify-content: center;
 }
 
-.paiButton {
+.paiBtnContinuar {
  /*border: 5px solid red;*/
   display: flex; 
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 500px; 
-  height: 630px;
+  width: 100px; 
+  height: 100px;
 }
 
 button {
-  width: 100%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
   background-color:#E63946 ;
-  font-size: 50px;
+  font-size: 20px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: italic;
   color: rgba(255, 192, 249, 0.84);
@@ -32,7 +32,7 @@ button {
   cursor: pointer;
 }
 
-.buttonStart {
+.buttoncontinuar {
  /*border: 2px solid red;*/
  border-radius: 8px;
   display: flex;
@@ -40,5 +40,5 @@ button {
   align-items: center;
   justify-content: center;
   width: 200px;
-  height: 100px;
+  height: 90px;
 }
