--- a/src/componentes/ButtonStart.css
+++ b/src/componentes/ButtonStart.css
@@ -37,6 +37,7 @@ button {
  border-radius: 8px;
   display: flex;
   flex-direction: column;
+  font-size: 20px ;
   align-items: center;
   justify-content: center;
   width: 200px;
