--- a/src/componentes/ButtonStart.css
+++ b/src/componentes/ButtonStart.css
@@ -16,24 +16,25 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 500px; 
+  width: 600px; 
   height: 630px;
 }
 
 button {
-  width: 100%;
-  height: 100%;
+  border: solid 4px black;
+  width: 500px;
+  height: 500px;
   background-color:#E63946 ;
   font-size: 50px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: italic;
   color: rgba(255, 192, 255, 0.232);
-  border: none;
-  cursor: pointer;
+  /*border: none;*/
+  /*cursor: pointer;*/
 }
 
 .buttonStart {
- /*border: 2px solid red;*/
+ border: 2px solid red;
  border-radius: 8px;
   display: flex;
   flex-direction: column;
